Made the title of every HTML page dynamic.

--- a/api/templates/signup.html
+++ b/api/templates/signup.html
@@ -3,6 +3,7 @@
 
 {% block head %}
   <link rel="stylesheet" href="{% static 'css/signup.css' %}">
+  <title>{{ title }}</title>
 {% endblock head %}
 
 {% block body %}
