--- a/api/templates/docs.html
+++ b/api/templates/docs.html
@@ -3,6 +3,7 @@
 
 {% block head %}
   <link rel="stylesheet" href="{% static 'css/docs.css' %}">
+  <title>{{ title }}</title>
 {% endblock head %}
 
 {% block body %}
