--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -3,6 +3,7 @@
 
 {% block head %}
   <link rel="stylesheet" href="{% static 'css/index.css' %}">
+  <title>{{ title }}</title>
 {% endblock head %}
 
 {% block body %}
