Docs Page not empty now, having some documentation.

--- a/api/static/static_files/css/base.css
+++ b/api/static/static_files/css/base.css
@@ -1,4 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  color: white;
+}
+
+body {
+  background-color: rgb(54, 69, 73);
+}
+
+.section-main {
+  margin: 0.5em;
 }
