--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -2,16 +2,19 @@
 
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="{% static "css/base.css" %}">
+    {% block head%}{% endblock head %}
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static "css/base.css" %}">
-  {% block head %}{% endblock head %}
-</head>
-
-<body>
-{% block body %}{% endblock body %}
-</body>
-
+  <body>
+    <section class="section section-main">{% block body %}{% endblock body %}</section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
