--- a/api/templates/docs/index.html
+++ b/api/templates/docs/index.html
@@ -2,10 +2,11 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static "css/docs/index.css" %}">
 <title>{{title}}</title>
+<link rel="stylesheet" href="{% static "css/docs/index.css" %}">
 {% endblock head %}
 
 {% block body %}
-
+{% include "docs/endpoints.html" %}
+{% include "docs/configGuide.html" %}
 {% endblock body %}
