More Some Config Documentation added in Docs page.

--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -1,7 +1,6 @@
-<h1 class="h1-guide">Endpoints</h1>
-
 <section class="section section-endpoints" id="section-endpoints">
-  <table class="table table-endpoints table-dark table-striped" id="table-endpoints">
+  <h1 class="h1-guide">Endpoints</h1>
+  <table class="table table-endpoints table-dark table-striped table-hover table-bordered border-black table-sm" id="table-endpoints">
     <thead>
       <tr>
         <th scope="col">#</th>
