--- a/api/static/static_files/css/docs/index.css
+++ b/api/static/static_files/css/docs/index.css
@@ -1,4 +1,36 @@
 .h1-guide {
   text-align: center;
-  text-decoration: underline;
+  /* text-decoration: underline; */
+  /* color: rgb(24, 39, 43); */
+  color: black;
+}
+
+.h4-guide {
+  color: black;
+  /* text-decoration: underline; */
+  margin: 0;
+  padding: 0
+}
+
+.div-centered {
+  margin: auto;
+  width: 50%;
+}
+
+.div-para {
+  padding: 0.5em;
+  width: 50%;
+  /* border: 0.2em solid black; */
+  /* border-radius: 2em; */
+  /* background-color: rgb(14, 29, 33); */
+}
+
+.span-important {
+  font-weight: bold;
+}
+
+.ol-configFields li::marker {
+  color: black;
+  font-weight: bold;
+  font-size: larger;
 }
