--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -32,7 +32,7 @@
         <th scope="row">3</th>
         <td>/signup</td>
         <td>Sign Up</td>
-        <td>-</td>
+        <td>This endpoint only accepts POST requests. It validates the credentials in the form for account creation and creates an account, otherwise returns a JSON response with the appropriate error.</td>
       </tr>
     </tbody>
   </table>
