--- a/api/static/static_files/css/docs/index.css
+++ b/api/static/static_files/css/docs/index.css
@@ -25,11 +25,16 @@
   /* background-color: rgb(14, 29, 33); */
 }
 
+.iframe-code {
+  margin: 0.5em;
+  padding: 0.3em;
+}
+
 .span-important {
   font-weight: bold;
 }
 
-.ol-configFields li::marker {
+.ol li::marker {
   color: black;
   font-weight: bold;
   font-size: larger;
