Changed all the code preview to "emgithub"

--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -77,7 +77,7 @@
     </ol>
 
     <h4 class="h4-guide">Default Config File</h4>
-    <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:184px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fconfig.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+    <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:400px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fconfig.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
 
 
     <h1 class="h1-guide">POST Demo Data</h1>
@@ -91,7 +91,7 @@
     <ol class="ol ol-demoData">
       <li>
         <h4 class="h4-guide">/signup</h4>
-            <iframe class="iframe-code" frameborder="0" scrolling="no" allow="clipboard-write" src="https://pastebin.com/embed_iframe/d6sPY8RR?theme=dark" style="width:100%; height:184px"></iframe>
+        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:205px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsignup.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
     </ol>
