Added Documentation for new fields in Config and Sign In Page

--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -74,6 +74,28 @@
           </div>
         <br>
       </li>
+
+      <li>
+        <h4 class="h4-guide">sessionId_length</h4>
+          <div class="div-para">
+            <p>
+              When a user login into the account, he is allotted a new session id. This field determines the length of that session id.
+              This can be changed but are not necessary and recommended to do so.
+            </p>
+          </div>
+        <br>
+      </li>
+
+      <li>
+        <h4 class="h4-guide">salt_length</h4>
+          <div class="div-para">
+            <p>
+              When a user creates an account, a new salt is generated. This field determines the length of that salt.
+              This can be changed but are not necessary and recommended to do so.
+            </p>
+          </div>
+        <br>
+      </li>
     </ol>
 
     <h4 class="h4-guide">Default Config File</h4>
@@ -92,6 +114,12 @@
       <li>
         <h4 class="h4-guide">/signup</h4>
         <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:205px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsignup.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <br>
+      </li>
+
+      <li>
+        <h4 class="h4-guide">/signin</h4>
+        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:163px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsignin.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
     </ol>
