--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -26,13 +26,13 @@
         <th scope="row">3</th>
         <td>/signin</td>
         <td>Sign In</td>
-        <td>-</td>
+        <td>This endpoint only accepts POST requests. It validates the credentials in the form for account login and creates a new session ID token and logs in the user while returning the session ID token to the user in the form of JSON Response, otherwise returns a JSON Response with the appropriate error.</td>
       </tr>
       <tr>
         <th scope="row">3</th>
         <td>/signup</td>
         <td>Sign Up</td>
-        <td>This endpoint only accepts POST requests. It validates the credentials in the form for account creation and creates an account, otherwise returns a JSON response with the appropriate error.</td>
+        <td>This endpoint only accepts POST requests. It validates the credentials in the form for account creation and creates an account, otherwise returns a JSON Response with the appropriate error.</td>
       </tr>
     </tbody>
   </table>
