Added Documentation for the endpoint /vault-get

--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -29,10 +29,16 @@
         <td>This endpoint only accepts POST requests. It validates the credentials in the form for account login and creates a new session ID token and logs in the user while returning the session ID token to the user in the form of JSON Response, otherwise returns a JSON Response with the appropriate error.</td>
       </tr>
       <tr>
-        <th scope="row">3</th>
+        <th scope="row">4</th>
         <td>/signup</td>
         <td>Sign Up</td>
         <td>This endpoint only accepts POST requests. It validates the credentials in the form for account creation and creates an account, otherwise returns a JSON Response with the appropriate error.</td>
+      </tr>
+      <tr>
+        <th scope="row">5</th>
+        <td>/vault-get</td>
+        <td>Vault Get</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and then gives the user's entire list of passwords in their account.</td>
       </tr>
     </tbody>
   </table>
