Added Documentation for "max_sessions" field in config.

--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -134,7 +134,19 @@
             <p>Data Type: Integer</p>
             <p>
               When a user creates an account, a new salt is generated. This field determines the length of that salt.
-              This can be changed but are not necessary and recommended to do so.
+              This can be changed but is not necessary and recommended to do so.
+            </p>
+          </div>
+        <br>
+      </li>
+
+      <li>
+        <h4 class="h4-guide">max_sessions</h4>
+          <div class="div-para">
+            <p>Data Type: Integer</p>
+            <p>
+              When a user logs into the account, a new session is generated. This field determines that how many sessions can be generated for a single user.
+              This can be changed but is not necessary and recommended to do so.
             </p>
           </div>
         <br>
