Added Documentation for /vault-new endpoint.

--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -40,6 +40,12 @@
         <td>Vault Get</td>
         <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and then gives the user's entire list of passwords in their account.</td>
       </tr>
+      <tr>
+        <th scope="row">6</th>
+        <td>/vault-new</td>
+        <td>Vault New</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and creates a new entry of password in theirs password's list.</td>
+      </tr>
     </tbody>
   </table>
 </section>
