Added the documentation for /vault-delete

--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -46,6 +46,12 @@
         <td>Vault New</td>
         <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and creates a new entry of password in theirs password's list.</td>
       </tr>
+      <tr>
+        <th scope="row">7</th>
+        <td>/vault-delete</td>
+        <td>Vault Delete</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and deletes an entry of password in theirs password's list.</td>
+      </tr>
     </tbody>
   </table>
 </section>
