Added the documentation for /vault-edit endpoint.

--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -52,6 +52,12 @@
         <td>Vault Delete</td>
         <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and deletes an entry of password in theirs password's list.</td>
       </tr>
+      <tr>
+        <th scope="row">8</th>
+        <td>/vault-edit</td>
+        <td>Vault Edit</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and edits an entry of password in theirs password's list.</td>
+      </tr>
     </tbody>
   </table>
 </section>
