--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="{% static "css/base.css" %}">
+    <link rel="icon" type="image/x-icon" href="{% static "images/base/APM-Logo-BG.png" %}">
     {% block head%}{% endblock head %}
   </head>
 
