Updated the docs.

--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -163,6 +163,7 @@
         This section contains some demo data for the post requests on different endpoints.
         The demo data is in the form json.
       </p>
+      <p>Note: Whenever the API must be called on a POST endpoint, the url should always have a "/" at the end.</p>
     </div>
 
     <ol class="ol ol-demoData">
