Changed the Github repo link

--- a/api/templates/home/index.html
+++ b/api/templates/home/index.html
@@ -16,7 +16,7 @@
   <a class="link" href="{% url "Docs" %}">/docs</a>
   <hr>
   <p class="mb-0">GitHub Link:</p>
-  <a class="link" href="https://github.com/Abled-Taha/apm-app">App</a>
+  <a class="link" href="https://github.com/Abled-Taha/apm-app-web">App</a>
   <br>
   <a class="link" href="https://github.com/Abled-Taha/apm-server">Server</a>
 </div>
