Added session-get/ endpoint docs

--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -58,6 +58,12 @@
         <td>Vault Edit</td>
         <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and edits an entry of password in theirs password's list.</td>
       </tr>
+      <tr>
+        <th scope="row">9</th>
+        <td>/session-get</td>
+        <td>Session Get</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and then gives the user's entire list of active sessions in their account.</td>
+      </tr>
     </tbody>
   </table>
 </section>
