Added docs for session-delete/ endpoint

--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -64,6 +64,12 @@
         <td>Session Get</td>
         <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and then gives the user's entire list of active sessions in their account.</td>
       </tr>
+      <tr>
+        <th scope="row">10</th>
+        <td>/session-delete</td>
+        <td>Session Delete</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and deletes an entry of session in theirs sessions list.</td>
+      </tr>
     </tbody>
   </table>
 </section>
