--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -14,7 +14,7 @@
         <th scope="row">1</th>
         <td>/</td>
         <td>Index</td>
-        <td>-</td>
+        <td>The Main Page. Shows up a congratulations Alert if the server is running.</td>
       </tr>
       <tr>
         <th scope="row">2</th>
