Added docs for session-edit/ endpoint

--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -70,6 +70,12 @@
         <td>Session Delete</td>
         <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and deletes an entry of session in theirs sessions list.</td>
       </tr>
+      <tr>
+        <th scope="row">11</th>
+        <td>/session-edit</td>
+        <td>Session Edit</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and edits an entry of session in theirs sessions list.</td>
+      </tr>
     </tbody>
   </table>
 </section>
