--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -93,6 +93,18 @@
       </li>
 
       <li>
+        <h4 class="h4-guide">server_host | server_port</h4>
+          <div class="div-para">
+            <p>Data Type: String</p>
+            <p>
+              This field contains the host and the port of the api on which the api would be served.
+              These can be changed but are not necessary to do so.
+            </p>
+          </div>
+        <br>
+      </li>
+
+      <li>
         <h4 class="h4-guide">username_min_length | username_max_length</h4>
           <div class="div-para">
             <p>Data Type: Integer</p>
