The encryption of passwords in the vault is now done by the client

--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -176,6 +176,7 @@
         The demo data is in the form json.
       </p>
       <p>Note: Whenever the API must be called on a POST endpoint, the url should always have a "/" at the end.</p>
+      <p>Note: Encryption of Password in the Vault is done on client, not on the server. The "password" field in the json data is already encrypted by the client.</p>
     </div>
 
     <ol class="ol ol-demoData">
