Updated docs and fixed minor bug

--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -93,6 +93,18 @@
       </li>
 
       <li>
+        <h4 class="h4-guide">db_srv</h4>
+          <div class="div-para">
+            <p>Data Type: Boolean</p>
+            <p>
+              This field contains the the bool to check if the db connections uses srv or not
+              These can be changed but are not necessary to do so.
+            </p>
+          </div>
+        <br>
+      </li>
+
+      <li>
         <h4 class="h4-guide">server_host | server_port</h4>
           <div class="div-para">
             <p>Data Type: String</p>
