--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -175,6 +175,17 @@
           </div>
         <br>
       </li>
+
+      <li>
+        <h4 class="h4-guide">pp_width | pp_height</h4>
+          <div class="div-para">
+            <p>Data Type: Integer</p>
+            <p>
+              This is the size of the profile picture of the user. It is in Pixels.
+            </p>
+          </div>
+        <br>
+      </li>
     </ol>
 
     <h4 class="h4-guide">Default Config File</h4>
@@ -243,6 +254,18 @@
       <li>
         <h4 class="h4-guide">/session-edit</h4>
         <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fsession-edit.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <br>
+      </li>
+
+      <li>
+        <h4 class="h4-guide">/pp-new</h4>
+        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fpp-new.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <br>
+      </li>
+
+      <li>
+        <h4 class="h4-guide">/pp-get</h4>
+        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fpp-get.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
     </ol>
