--- a/api/templates/docs/endpoints.html
+++ b/api/templates/docs/endpoints.html
@@ -74,7 +74,31 @@
         <th scope="row">11</th>
         <td>/session-edit</td>
         <td>Session Edit</td>
-        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and edits an entry of session in theirs sessions list.</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and edits an entry of session in their sessions list.</td>
+      </tr>
+      <tr>
+        <th scope="row">12</th>
+        <td>/pp-get</td>
+        <td>Profile Picture Get</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and returns the PP.</td>
+      </tr>
+      <tr>
+        <th scope="row">13</th>
+        <td>/pp-new</td>
+        <td>Profile Picture New</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and edits their pp.</td>
+      </tr>
+      <tr>
+        <th scope="row">14</th>
+        <td>/otp-send</td>
+        <td>OTP Send</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and sends an otp on their provided email.</td>
+      </tr>
+      <tr>
+        <th scope="row">15</th>
+        <td>/otp-verify</td>
+        <td>OTP Verify</td>
+        <td>This endpoint only accepts POST requests. It validates the user's Email and Session ID and the sent OTP.</td>
       </tr>
     </tbody>
   </table>
