--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -186,10 +186,45 @@
           </div>
         <br>
       </li>
+
+      <li>
+        <h4 class="h4-guide">email_verification</h4>
+          <div class="div-para">
+            <p>Data Type: Boolean</p>
+            <p>
+              If set to true, only then the functionality of email verification would work.
+            </p>
+          </div>
+        <br>
+      </li>
+      
+      <li>
+        <h4 class="h4-guide">email_host | email_port</h4>
+          <div class="div-para">
+            <p>Data Type: String</p>
+            <p>
+              This field contains the host and the port of the email server to use.
+              These can be changed but are not necessary to do so and can be null if email_verification is False.
+            </p>
+          </div>
+        <br>
+      </li>
+      
+      <li>
+        <h4 class="h4-guide">email_host_user | email_host_password</h4>
+          <div class="div-para">
+            <p>Data Type: String</p>
+            <p>
+              This field contains the email from which to send verification and app password if using Gmail.
+              These must be changed but can be null if email_verification is False.
+            </p>
+          </div>
+        <br>
+      </li>
     </ol>
 
     <h4 class="h4-guide">Default Config File</h4>
-    <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:400px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fconfig.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+    <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:650px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fconfig.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
 
 
     <h1 class="h1-guide">POST Demo Data</h1>
@@ -266,6 +301,18 @@
       <li>
         <h4 class="h4-guide">/pp-get</h4>
         <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fpp-get.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <br>
+      </li>
+      
+      <li>
+        <h4 class="h4-guide">/otp-send</h4>
+        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fotp-send.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <br>
+      </li>
+      
+      <li>
+        <h4 class="h4-guide">/otp-verify</h4>
+        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fotp-verify.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
     </ol>
