--- a/api/templates/docs/configGuide.html
+++ b/api/templates/docs/configGuide.html
@@ -315,5 +315,11 @@
         <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:240px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fotp-verify.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
         <br>
       </li>
+
+      <li>
+        <h4 class="h4-guide">/change-password</h4>
+        <iframe class="iframe-code" frameborder="0" scrolling="no" style="width:100%; height:480px;" allow="clipboard-write" src="https://emgithub.com/iframe.html?target=https%3A%2F%2Fgithub.com%2FAbled-Taha%2Fapm-server%2Fblob%2Fmain%2Fapi%2Fstatic%2Fpost_demo_data%2Fchange-password.json&style=a11y-dark&type=code&showBorder=on&showLineNumbers=on&showFileMeta=on&showFullPath=on&showCopy=on"></iframe>
+        <br>
+      </li>
     </ol>
 </section>
